Bug 423877 - cbr files are not opened with a cbr reader (Okular, for example)
Summary: cbr files are not opened with a cbr reader (Okular, for example)
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-04 17:14 UTC by Toni Asensi Esteve
Modified: 2020-07-18 17:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toni Asensi Esteve 2020-07-04 17:14:32 UTC
SUMMARY
When the user press e.g. Return on a cbr file, then Krusader enters that file, like if it was a normal rar file, instead of opening it with a cbr reader (like Okular).

STEPS TO REPRODUCE
Press Return on a cbr file (like https://example-files.online-convert.com/ebook/cbr/example.cbr).

OBSERVED RESULT
See that Krusader enters the cbr file instead of launching a cbr reader (e.g. Okular). 

EXPECTED RESULT
Krusader should open the cbr file with a cbr reader (like Okular). The case should be the same as when opening cbz files (which structurally are zip files), odt files (which structurally are zip files), etc.
Comment 1 Bug Janitor Service 2020-07-04 17:26:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/krusader/-/merge_requests/20
Comment 2 Toni Asensi Esteve 2020-07-18 17:18:20 UTC
Git commit 97154479e5969cfda97ad833bc2106a80f98aa74 by Toni Asensi Esteve.
Committed on 18/07/2020 at 17:17.
Pushed by asensi into branch 'master'.

Identify one more MIME type as "cbr" in order to deal with it as it's expected

FIXED: [ 423877 ] cbr files are not opened with a cbr reader (Okular, for example)

Revision: https://invent.kde.org/utilities/krusader/-/merge_requests/20

M  +4    -0    krArc/krarcbasemanager.cpp

https://invent.kde.org/utilities/krusader/commit/97154479e5969cfda97ad833bc2106a80f98aa74