Identify one more MIME type as "cbr" in order to deal with it as it's expected

FIXED: [ 423877 ] cbr files are not opened with a cbr reader (Okular, for example)
BUG: 423877

Revision: https://invent.kde.org/utilities/krusader/-/merge_requests/20